--- a/ProblemSolving/ProblemSolving.csproj
+++ b/ProblemSolving/ProblemSolving.csproj
@@ -120,11 +120,15 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ArrayofMultiplesController.cs" />
+    <Compile Include="Controllers\FizzBuzzController.cs" />
     <Compile Include="Controllers\GetMonthNameByNumberController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ArrayofMultiples.cs" />
+    <Compile Include="Models\FizzBuzz.cs" />
     <Compile Include="Models\GetMonthNameByNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -163,10 +167,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\GetMonthNameByNumber\Index.cshtml" />
+    <Content Include="Views\ArrayofMultiples\Index.cshtml" />
+    <Content Include="Views\FizzBuzz\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\ArrayofMultiples\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
